# shipment-approval-reviewer

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/shipment-ocr-gap-transcribing/: SKILL.md
.claude/skills/shipment-review-auto/: SKILL.md
scripts/: init.py
src/shipment_review/: cli.py  config.py  formatters.py  html_report.py  json_report.py  models.py  normalization.py  report.py  rules.py  text_report.py
src/shipment_review/extractors/: __init__.py  approval.py  contract.py  files.py  module_table.py  ocr_gaps.py  text.py  transcript.py  transcript_agreement.py
tests/: test_cli.py  test_file_detection.py  test_formatters.py  test_models.py  test_module_matching.py  test_module_transcript.py  test_normalization.py  test_normalization_ocr.py  test_ocr_gaps.py  test_package.py  test_parsers.py  test_real_cases.py  test_report.py  test_report_module_transcript.py  test_rules.py  test_rules_ocr.py  test_text_extractor.py  test_text_report.py  test_transcript.py  test_transcript_agreement.py
