[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "shipment-approval-reviewer"
version = "0.1.0"
description = "Rule-based shipment approval reviewer"
requires-python = ">=3.11"
dependencies = [
  "pypdf>=4.0",
  "Pillow>=10.0",
]

[project.optional-dependencies]
ocr = [
  "PyMuPDF>=1.24",
  "rapidocr-onnxruntime>=1.3",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
shipment-review = "shipment_review.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
